2003-02-26  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* tmda-inject (inject_message): Sort ADDED_HEADERS_CLIENT before
	adding them to the message.

2003-02-22  Jason R. Mastaler  <jason@aguirre.la.mastaler.com>

	* tmda-inject (inject_message): Bugfix. Remove all tag action
	headers after each SMTP transmission so they aren't
	unconditionally inherited by subsequent recipients.
		
2003-02-20  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

        * tmda-inject (msgout): Create the message object from our own
        Message module. `From' is no longer escaped.
        
2003-02-17  Jason R. Mastaler  <jason@aguirre.la.mastaler.com>

	* tmda-check-address (main): Bugfix. Print the expired date for
	old dated addresses.

2003-02-13  Mark Horn  <mark@hornclan.com>

	* tmda-rfilter (logit): added ability to log action to the
	X-TMDA-Action header

2003-02-04  Tim Legant  <tim@catseye.net>

	* tmda-ofmipd (run_authprog): Fixed problem with -A's interface to
	checkpassword-style programs.

2003-02-03  Tim Legant  <tim@catseye.net>

	* tmda-ofmipd: Remove broken warning about not having a
	vhome-script when you specify a vdomains-path.

2003-02-03  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* tmda-ofmipd (main): Only check the authfile if not doing remote
	authentication, or if --fallback is specified.

2003-01-27  Tim Legant  <tim@catseye.net>

	* tmda-ofmipd (run_remoteauth): Add capability to authenticate
	against servers on different aliases, to support IP-based virtual
	domains.  Uses mapping file (~/.tmda/ipauthmap) or same IP client
	connected to, if no file.  If file exists but server IP cannot be
	found, fall back to localhost.

	(VDomainProxy.process_message): Removed the --config-file command
	line parameter to tmda-inject, since tmda-inject can find the
	config file on its own now, thanks to a properly set $HOME.

	(ipauthmap2dict): Helper function to read ipauthmap and return
	Python dictionary.
	