@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Feb 25 13:12:33 2003 -->
+<!-- Tue Mar  4 15:11:20 2003 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -1376,7 +1376,8 @@ contents will be taken as the envelope recipient of the message.
 The header should contain one fully-qualified e-mail address.  This
 can be used in rare cases when you need to override the RECIPIENT
 environment variable, which is how TMDA normally determines the
-envelope recipient address.
+envelope recipient address. If EXT isn't set, the address extension
+will also be extracted from RECIPIENT_HEADER.
 <br><br>
 Example:
 <br><br>
